@@ -1,3 +1,7 @@
+* put engine version in system properties for debugging (sgb)
+
+* mark kamikaze moves as such in the history (sgb)
+
 * fix bug [ 1856656 ] IllegalState exception (sgb)
 
 * disable chat time menu in non networked games (sgb)
